# app/Http/Requests/UpdateNotebookRequest.php
@@ -3,12 +3,45 @@
 namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Schema(
+ *      title="UpdateNotebookRequest",
+ *      description="UpdateNotebookRequest data",
+ *      type="object",
+ * )
+ */
 
 class UpdateNotebookRequest extends FormRequest
 {
     /**
-     * Determine if the user is authorized to make this request.
+     * @OA\Property(
+     *      property="initials",
+     *      description="Инициалы",
+     * ),
+     * @OA\Property(
+     *      property="company",
+     *      description="Компания",
+     * ),
+     * @OA\Property(
+     *      property="phone",
+     *      description="Телефон",
+     *),
+     * @OA\Property(
+     *      property="email",
+     *      description="Почта",
+     *),
+     * @OA\Property(
+     *      property="birthday",
+     *      description="Дата рождения",
+     *),
+     * @OA\Property(
+     *      property="photo",
+     *      description="Фотография"
+     *),
      */
+
     public function authorize(): bool
     {
         return true;
